[gd_scene load_steps=12 format=2]

[ext_resource path="res://DottedSongtiCircleRegular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://ControlAnimator.tscn" type="PackedScene" id=2]
[ext_resource path="res://btn2.png" type="Texture" id=3]
[ext_resource path="res://btn3.png" type="Texture" id=4]
[ext_resource path="res://Start.gd" type="Script" id=5]
[ext_resource path="res://back2.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="DynamicFont" id=5]
size = 108
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -189.0
margin_top = -91.0
margin_right = 1954.0
margin_bottom = 1058.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 347.0
margin_top = 512.0
margin_right = 975.0
margin_bottom = 591.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
text = "开始"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_animation" parent="Button" instance=ExtResource( 2 )]

[node name="ChangeTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 387.0
margin_top = 323.0
margin_right = 1027.0
margin_bottom = 478.0
custom_fonts/font = SubResource( 5 )
text = "Aiko VS QB"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="ChangeTimer" to="." method="_on_ChangeTimer_timeout"]
